updated my file

--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -9,6 +9,7 @@
     <button onclick="rock()">rock</button>
     <button onclick="paper()">paper</button>
     <button onclick="scissors()">scissors</button>
+    <button onclick="resetScore()">Reset Score</button>
     <script src="rock-paper-scissors.js"></script>
 </body>
 </html>
