re wrote the codes under function and if statement

--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -10,6 +10,7 @@
     <button onclick="paper()">paper</button>
     <button onclick="scissors()">scissors</button>
     <button onclick="resetScore()">Reset Score</button>
+    <h2 id="result-el"></h2>
     <script src="rock-paper-scissors.js"></script>
 </body>
 </html>
