added DOM IN THE PROJECT

--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -6,11 +6,15 @@
     <title>Rock paper scissors</title>
 </head>
 <body>
+    <h1>Rock paper scissors</h1>
     <button onclick="rock()">rock</button>
     <button onclick="paper()">paper</button>
-    <button onclick="scissors()">scissors</button>
+    <button onclick="scissors()">scissors</button><br>
+    <p class="js.result"></p>
+    <p class="js-moves"></p>
+    <p id="result-el"></p>
     <button onclick="resetScore()">Reset Score</button>
-    <h2 id="result-el"></h2>
+    
     <script src="rock-paper-scissors.js"></script>
 </body>
 </html>
