--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissors</title>
+    <link rel="stylesheet" href="rock-paper-scissor.css">
 </head>
 <body>
-    <h1>Rock paper scissors</h1>
-    <button onclick="rock()">rock</button>
-    <button onclick="paper()">paper</button>
-    <button onclick="scissors()">scissors</button><br>
-    <p class="js.result"></p>
+    <h1 class="title">Rock paper scissors</h1>
+    <button onclick="rock()" class="move-btn"><img src="img/rock-emoji.png" class="move-icon"></button>
+    <button onclick="paper()" class="move-btn"><img src="img/paper-emoji.png" class="move-icon"></button>
+    <button onclick="scissors()" class="move-btn"><img src="img/scissors-emoji.png" class="move-icon"></button><br>
+    <p class="js-result result"></p>
     <p class="js-moves"></p>
-    <p id="result-el"></p>
-    <button onclick="resetScore()">Reset Score</button>
+    <p id="result-el" class="score"></p>
+    <button onclick="resetScore()" class="reset-btn">Reset Score</button>
     
     <script src="rock-paper-scissors.js"></script>
 </body>
