--- a/amazonShippingCalculator.html
+++ b/amazonShippingCalculator.html
@@ -10,7 +10,7 @@
     <h1>Amazon Shipping Calculator</h1>
     <input placeholder="cost of order" class="js-cost-input cost-input"onkeydown="handleCostKeydown(event)">
     <button onclick="calculateTotal()">Calculate</button>
-    <p class="js-total-cost"></p>
+    <p class="js-total-costmof"></p>
     <script src="amazonShipingCalculator.js"></script>
 </body>
 </html>
